(ISA-306) fix metadata dialog text wrap

--- a/frontend/src/ui/css/app.scss
+++ b/frontend/src/ui/css/app.scss
@@ -399,7 +399,6 @@ rect#background {
     user-select: text;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 }
 .metadata-record .section:not(:last-child) {
     margin-bottom: 15px;
